--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@primevue/auto-import-resolver": "^4.0.4",
-    "@primevue/themes": "^4.0.4",
+    "@primevue/auto-import-resolver": "^4.2.1",
+    "@primevue/themes": "^4.2.1",
     "chart.js": "^3.3.2",
-    "nuxt": "^3.12.4",
+    "nuxt": "^3.14.0",
     "nuxt-primevue": "^4.0.0-beta.4",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
-    "primevue": "^4.0.4",
-    "vue": "latest"
+    "primevue": "^4.2.1",
+    "vue": "^3.5.12"
   },
   "devDependencies": {
-    "@primevue/nuxt-module": "^4.0.4",
+    "@primevue/nuxt-module": "^4.2.1",
     "sass": "^1.77.8"
   }
 }
